crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__configuration_tests__create_native_operation_with_array_parameter.snap
---
source: crates/tests/databases-tests/src/postgres/configuration_tests.rs
expression: result
---
{
  "sql": {
    "file": "test.sql"
  },
  "columns": {
    "result": {
      "name": "result",
      "type": {
        "scalarType": "int4"
      },
      "nullable": "nullable",
      "description": null
    }
  },
  "arguments": {
    "array_param": {
      "name": "array_param",
      "type": {
        "arrayType": {
          "scalarType": "int4"
        }
      },
      "nullable": "nonNullable",
      "description": null
    }
  },
  "description": null
}
