crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__configuration_tests__create_native_operation_with_nested_array_parameter.snap
---
source: crates/tests/databases-tests/src/postgres/configuration_tests.rs
expression: result
---
{
  "sql": {
    "file": "test.sql"
  },
  "columns": {
    "result": {
      "name": "result",
      "type": {
        "scalarType": "int4"
      },
      "nullable": "nullable",
      "description": null
    }
  },
  "arguments": {
    "nested_array_param": {
      "name": "nested_array_param",
      "type": {
        "arrayType": {
          "arrayType": {
            "scalarType": "int4"
          }
        }
      },
      "nullable": "nonNullable",
      "description": null
    }
  },
  "description": null
}
